check point + log, rm

--- a/proj3/testing/testAdd1.in
+++ b/proj3/testing/testAdd1.in
@@ -2,6 +2,6 @@
 # create a file name wug.txt and copy content from src/wug.txt to it
 > init
 <<<
-+ wug1.txt wug.txt
++ wug.txt wug.txt
 > add wug.txt
 <<<
